@@ -1,3 +1,9 @@
+2014-10-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/59488
+	* trans-openmp.c (gfc_omp_predetermined_sharing): Return
+	OMP_CLAUSE_DEFAULT_SHARED for parameters or vtables.
+
 2014-10-10  Tobias Burnus  <burnus@net-b.de>
 
 	* gfortran.h (gfc_set_implicit_none): Update prototype.
